--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -12,6 +12,7 @@ library(EnvStats)
 library(ggpubr)
 library(tidyverse)
 library(car)
+library(lmtest)
 ```
 
 
@@ -97,8 +98,93 @@ modelo_termina
 ```
 revisamos los AIC y vemos cual es el menor, solo agregar el menor con update, repetir un par de veces.
 
-condiciones para generalizar el modelo (cambiar nombres eh interpretar datos solamente)
 
+
+```{r}
+#Modificamos el modelo añadiendo el predictor que nos dio el menor AIC, "Navel.Grith"
+modelo_simple2 <- update(modelo_simple, . ~ . + Navel.Girth)
+AIC_2 <- add1(modelo_simple2, scope = modelo_completo)
+AIC_2
+```
+
+```{r}
+#Añadimos un predictor más, que sería Calf.Maximum.Girth
+modelo_simple3 <- update(modelo_simple2, . ~ . + Calf.Maximum.Girth)
+AIC_3 <- add1(modelo_simple3, scope = modelo_completo)
+AIC_3
+```
+
+```{r}
+#Añadimos un predictor más, que sería Waist.Girth
+modelo_simple4 <- update(modelo_simple3, . ~ . + Waist.Girth)
+AIC_4 <- add1(modelo_simple4, scope = modelo_completo)
+AIC_4
+
+```
+
+```{r}
+#Añadimos un predictor más, que sería Bitrochanteric.diameter
+modelo_simple5 <- update(modelo_simple4, . ~ . + Bitrochanteric.diameter)
+AIC_5 <- add1(modelo_simple5, scope = modelo_completo)
+AIC_5
+```
+
+Se crearon 4 modelos distintos, donde cada uno tiene un predictor más que el anterior, siendo el modelo con más predictores 5 y el con menos 2. 
+
+
+## Bondad de ajuste
+
+
+Evaluamos la bondad de ajuste
+```{r}
+# Evaluar el R-cuadrado ajustado de cada modelo
+summary(modelo_simple2)$adj.r.squared
+summary(modelo_simple3)$adj.r.squared
+summary(modelo_simple4)$adj.r.squared
+summary(modelo_simple5)$adj.r.squared
+```
+
+```{r}
+# Evaluar el AIC y BIC de cada modelo
+AIC(modelo_simple2)
+BIC(modelo_simple2)
+AIC(modelo_simple3)
+BIC(modelo_simple3)
+AIC(modelo_simple4)
+BIC(modelo_simple4)
+AIC(modelo_simple5)
+BIC(modelo_simple5)
+```
+
+
+Como podemos ver, el que explica más varianza y tiene menor AIC y BIC es el modelo 5, por lo que es el que se escogerá para hacer las predicciones.
+
+```{r}
+#Análisis de casos atípicos con cook, apalancamiento, residuos estandarizados y studentizados, dffits y dfbetas 
+cooks_distance <- cooks.distance(modelo_simple5)
+leverage <- hatvalues(modelo_simple5)
+resid_standard <- rstandard(modelo_simple5)
+resid_student <- rstudent(modelo_simple5)
+dffits_values <- dffits(modelo_simple5)
+dfbetas_values <- dfbeta(modelo_simple5)
+
+# Observaciones con distancia de Cook mayor a 0.5.
+sospechosos1 <- which(abs(cooks_distance) > 0.5)
+sospechosos1
+
+# Observaciones con apalancamiento mayor a 2(p+1)/n
+apal_medio <- (ncol(datos_entrenamiento) + 1) / nrow(datos_entrenamiento)
+sospechosos2 <- which(abs(leverage) > 2 * apal_medio)
+sospechosos2
+
+
+
+```
+Como se puede apreciar, no existen valores atipicos en el modelo, por lo que no se deben eliminar valores.
+
+
+
+Condiciones para generalizar el modelo: 
 
 ```{r}
 
@@ -108,7 +194,7 @@ condiciones para generalizar el modelo (cambiar nombres eh interpretar datos sol
 
 # 3. Los predictores deben tener algún grado de variabilidad
 cat("Calculo de varianza de los predictores \n\n")
-sapply(datos_entrenamiento[, c("Elbows.diameter", "Bitrochanteric.diameter", "Chest.diameter", "Waist.Girth","Bicep.Girth","Chest.depth", "Calf.Maximum.Girth","Navel.Girth" )], var)
+sapply(datos_entrenamiento[, c("Bitrochanteric.diameter", "Waist.Girth", "Calf.Maximum.Girth","Navel.Girth", "Shoulder.Girth" )], var)
 cat("\n")
 cat("\n")
 
@@ -117,7 +203,7 @@ cat("\n")
 # 4. No debe existir multicolinealidad
 cat("Calculo de la multicolinealidad \n\n")
 # cambiar model_termina por el modelo final(no se puede usar el modelo obtenido por add1, hay que hacerlo a mano)
-vif(modelo_termina)
+vif(modelo_simple5)
 cat("\n")
 cat("\n")
 
@@ -125,17 +211,17 @@ cat("\n")
 
 # 5. Los residuos deben ser homocedásticos
 cat("Comprobación de la homocedásticidad de los residuos \n")
-plot(modelo_termina, which = 1)
+plot(modelo_simple5, which = 1)
 # cambiar model_termina por el modelo final(no se puede usar el modelo obtenido por add1, hay que hacerlo a mano)
-bptest(modelo_termina)
+bptest(modelo_simple5)
 cat("\n")
 
 # Como el p valor entregado por la prueba de Breusch-Pagan es menor a el nivel de significancia alpha (0.05), podemos afirmar que los residuos son homocedásticos.
 
 # 6. Los residuos deben seguir una distribución cercana a la normal centrada en cero
 cat("Comprobación de la normalidad \n")
-hist(residuals(modelo_termina), breaks = 10, main = "Histograma de Residuos", xlab = "Residuos")
-shapiro.test(residuals(modelo_termina))
+hist(residuals(modelo_simple5), breaks = 10, main = "Histograma de Residuos", xlab = "Residuos")
+shapiro.test(residuals(modelo_simple5))
 
 # Como el p valor entregado por la prueba de Shapiro es menor a el nivel de significancia alpha (0.05), podemos afirmar que los residuos siguen una distribución normal.
 
@@ -144,39 +230,43 @@ shapiro.test(residuals(modelo_termina))
 
 # 8. Cada predictor se relaciona linealmente con la variable de respuesta
 
-# Felicidad con N_mascotas
-ggscatter(datos_entrenamiento, x = "Felicidad", y = "N_mascotas", add = "reg.line", conf.int = TRUE) + 
+
+
+
+# Bitrochanteric.diameter con Weight
+ggscatter(datos_entrenamiento, x = "Bitrochanteric.diameter", y = "Weight", add = "reg.line", conf.int = TRUE) + 
   stat_cor(method = "pearson")
 # Para esta relación podemos asumir que es una lineal positiva débil, ya que, su valor R (0.29) se encuentra entre 0.2 y 0.4. Ademas,  podemos asumir que la correlación observada es significativa, ya que, su valor p (0.014) es menor al nivel de significancia alpha (0.05).
 
-# N_amigos con N_mascotas
-ggscatter(datos_entrenamiento, x = "N_amigos", y = "N_mascotas", add = "reg.line", conf.int = TRUE) + 
+# Waist.Girth con Weight
+ggscatter(datos_entrenamiento, x = "Waist.Girth", y = "Weight", add = "reg.line", conf.int = TRUE) + 
   stat_cor(method = "pearson")
 # Para esta relación podemos asumir que es una lineal positiva muy débil, ya que, su valor R (0.18) se encuentra entre 0 y 0.2. Ademas,  podemos asumir que la correlación observada no es significativa, ya que, su valor p (0.14) es mayor al nivel de significancia alpha (0.05).
 
-# Sexo con N_mascotas
-ggscatter(datos_entrenamiento, x = "Sexo", y = "N_mascotas", add = "reg.line", conf.int = TRUE) + 
+# Calf.Maximum.Girth con Weight
+ggscatter(datos_entrenamiento, x = "Calf.Maximum.Girth", y = "Weight", add = "reg.line", conf.int = TRUE) + 
   stat_cor(method = "pearson")
 # Para esta relación podemos asumir que es una lineal positiva débil, ya que, su valor R (0.32) se encuentra entre 0.2 y 0.4. Ademas,  podemos asumir que la correlación observada es significativa, ya que, su valor p (0.007) es menor al nivel de significancia alpha (0.05).
 
-# Edad con N_mascotas
-ggscatter(datos_entrenamiento, x = "Edad", y = "N_mascotas", add = "reg.line", conf.int = TRUE) + 
+# Navel.Girth con Weight
+ggscatter(datos_entrenamiento, x = "Navel.Girth", y = "Weight", add = "reg.line", conf.int = TRUE) + 
   stat_cor(method = "pearson")
-# Para esta relación podemos asumir que es una lineal negativa muy débil, ya que, su valor R (-0.043) se encuentra entre 0 y -0.2. Ademas,  podemos asumir que la correlación observada no es significativa, ya que, su valor p (0.73) es mayor al nivel de significancia alpha (0.05).
-```
 
+# Shoulder.Girth con Weight
+ggscatter(datos_entrenamiento, x = "Shoulder.Girth", y = "Weight", add = "reg.line", conf.int = TRUE) + 
+  stat_cor(method = "pearson")
+
+
+```
+Como se puede ver, se cumplen todas las condiciones, por lo que se puede generalizar el modelo
 
 ```{r}
-predicciones_inicial <- predict(modelo_inicial, newdata = datos_probar_modelo)
+predicciones_inicial <- predict(modelo_simple5, newdata = datos_prueba)
 
-mse_inicial <- mean((datos_probar_modelo$N_mascotas - predicciones_inicial)^2)
+mse_inicial <- mean((datos_prueba$Weight - predicciones_inicial)^2)
+mse_inicial
 ```
-
-
-
 ```{r}
-# Evaluar el R-cuadrado y R-cuadrado ajustado del modelo
-summary(modelo_termina)$r.squared
-summary(modelo_termina)$adj.r.squared
+summary(modelo_simple5)
 ```
 
