--- a/tarea 10/EP10.Rmd
+++ b/tarea 10/EP10.Rmd
@@ -30,16 +30,17 @@ Ahora podemos construir un modelo de regresión logística para predecir la vari
 
  2. Seleccionar una muestra de 150 mujeres (si la semilla es un número par) o 150 hombres (si la semilla es impar), asegurando que la mitad tenga estado nutricional “sobrepeso” y la otra mitad “no sobrepeso” en cada caso. Dividir esta muestra en dos conjuntos: los datos de 100 personas (50 con EN “sobrepeso”) para utilizar en la construcción de los modelos y 50 personas (25 con EN “sobrepeso”) para poder evaluarlos.
 
-### 3. Recordar las ocho posibles variables predictoras seleccionadas de forma aleatoria en el ejercicio anterior.
+ 3. Recordar las ocho posibles variables predictoras seleccionadas de forma aleatoria en el ejercicio anterior.
 
-### 4. Seleccionar, de las otras variables, una que el equipo considere que podría ser útil para predecir la clase EN, justificando bien esta selección (idealmente con literatura).
+4. Seleccionar, de las otras variables, una que el equipo considere que podría ser útil para predecir la clase EN, justificando bien esta selección (idealmente con literatura).
 
-### 5.Usando el entorno R, construir un modelo de regresión logística con el predictor seleccionado en el paso anterior y utilizando de la muestra obtenida.
+5.Usando el entorno R, construir un modelo de regresión logística con el predictor seleccionado en el paso anterior y utilizando de la muestra obtenida.
 
 ### 6.Usando estas herramientas para la exploración de modelos del entorno R1, buscar entre dos y cinco predictores de entre las variables seleccionadas al azar, recordadas en el punto 3, para agregar al modelo obtenido en el paso 5.
 
 ### 7.Evaluar la confiabilidad de los modelos (i.e. que tengan un buen nivel de ajuste y son generalizables) y “arreglarlos” en caso de que tengan algún problema.
-Usando código estándar1, evaluar el poder predictivo de los modelos con los datos de las 50 personas que no se incluyeron en su construcción en términos de sensibilidad y especificidad.
+
+### 8.Usando código estándar1, evaluar el poder predictivo de los modelos con los datos de las 50 personas que no se incluyeron en su construcción en términos de sensibilidad y especificidad.
 
 
 Primero se habrira el archoivo de datos llamdo EP09 Datos.csv y se carga en el data frame llamdo "Datos"
@@ -92,25 +93,77 @@ variables <- c("Elbows.diameter", "Bitrochanteric.diameter", "Chest.diameter", "
 
 ```
 
-Ahora se crea un modelo de regresion logistica con la variable elegida, la cual fue "Biiliac.diameter", se eligio esta variable debido a que....
+Ahora se crea un modelo de regresion logistica con la variable elegida y uno nulo, la cual fue "Biiliac.diameter", se eligio esta variable debido a que....
 ```{r}
+#Modelo Nulo
+modeloNulo <- glm(EN ~ 1, data = datos_entrenamiento, family = binomial)
 
 #usar pero falta justificar de buena manera
 modeloSimple <- glm(EN ~ Biiliac.diameter, data = datos_entrenamiento, family = binomial)
-summary(model)
+summary(modeloSimple)
 ```
 
 ahora se utilizaran las herramientas presentes en R para seleccionar otras variables predictoras,claramente se elegiran las variables que mas influyan en la prediccion del modelo, sin sobreajustarlo, y sin ningun sesgo en su eleccion, para esto se utilizara las variables que fueron seleccionadas de forma aleatoria en la actividad anterior
 
+
+
 ```{r}
-modeloTest <- add1(modeloSimple, scope = ~ Elbows.diameter + Bitrochanteric.diameter + Chest.diameter + Waist.Girth + Bicep.Girth + Chest.depth + Calf.Maximum.Girth + Navel.Girth, test = "Chisq")
+modelo_completo <- glm(EN ~ Biiliac.diameter + Shoulder.Girth + Elbows.diameter + Bitrochanteric.diameter + Chest.diameter + Waist.Girth + Bicep.Girth + Chest.depth + Calf.Maximum.Girth + Navel.Girth, data = datos_entrenamiento, family = binomial)
+
+modeloTest <- add1(modeloSimple, scope = modelo_completo)
 modeloTest
 
 ```
+Revisamos los AIC con menor valor y se observa que Bicep.Girth, Navel Girth, Waist.Girth, Shoulder.Girth, Chest.depth son las menores
+
+```{r}
+#Modificamos el modelo añadiendo el predictor que nos dio el menor AIC, "Bicep.Girth"
+modelo_simple2 <- update(modeloSimple, . ~ . + Bicep.Girth)
+AIC_2 <- add1(modelo_simple2, scope = modelo_completo)
+AIC_2
+```
+
+```{r}
+#Modificamos el modelo añadiendo el predictor "Navel.Grith"
+modelo_simple3 <- update(modelo_simple2, . ~ . + Navel.Girth)
+AIC_2 <- add1(modelo_simple2, scope = modelo_completo)
+AIC_2
+```
+
+```{r}
+#Añadimos un predictor más, que sería Waist.Girth
+modelo_simple4 <- update(modelo_simple3, . ~ . + Waist.Girth)
+AIC_3 <- add1(modelo_simple3, scope = modelo_completo)
+AIC_3
+```
+
+```{r}
+#Añadimos un predictor más, que sería Shoulder.Girth
+modelo_simple5 <- update(modelo_simple4, . ~ . + Shoulder.Girth)
+AIC_4 <- add1(modelo_simple4, scope = modelo_completo)
+AIC_4
+
+```
+
+```{r}
+#Añadimos un predictor más, que sería Chest.depth
+modelo_simple6 <- update(modelo_simple5, . ~ . + Chest.depth)
+AIC_5 <- add1(modelo_simple5, scope = modelo_completo)
+AIC_5
+```
+
+Se crearon 5 modelos distintos, donde cada uno tiene un predictor más que el anterior, siendo el modelo con más predictores 5 y el con menos el 2. 
 
 
+```{r}
+modeloA <- predict(modelo_simple2, datos_prueba, type = "response")
+modeloB <- predict(modelo_simple3, datos_prueba, type = "response")
+modeloC <- predict(modelo_simple4, datos_prueba, type = "response")
+modeloD <- predict(modelo_simple5, datos_prueba, type = "response")
+modeloE <- predict(modelo_simple6, datos_prueba, type = "response")
+```
 
-
-
-
-
+Revisamos porque genera errores de convergencia
+```{r}
+print(anova(modeloNulo, modelo_simple2, modelo_simple3, modelo_simple4, modelo_simple5, modelo_simple6, test = "LRT"))
+`
