--- a/tarea 10/EP10.Rmd
+++ b/tarea 10/EP10.Rmd
@@ -7,6 +7,12 @@ date: "`r Sys.Date()`"
 
 
 ```{r}
+if (!require("dplyr")) install.packages("dplyr")
+if (!require("ggpubr")) install.packages("ggpubr")
+if (!require("psych")) install.packages("psych")
+if (!require("ggfortify")) install.packages("ggfortify")
+if (!require("car")) install.packages("car")
+
 # Importamos las librerías
 library(dplyr)
 library(ggplot2)
@@ -15,6 +21,8 @@ library(ggpubr)
 library(tidyverse)
 library(car)
 library(lmtest)
+library(psych)
+library(ggfortify)
 ```
 
 
@@ -87,9 +95,15 @@ m_conS_entrenamiento <- tail(datos_mujeres_consobrepeso, 25)
 #Juntamos los conjuntos de prueba y entrenamiento
 datos_prueba <- rbind(m_sinS_prueba, m_conS_prueba)
 datos_entrenamiento <- rbind(m_sinS_entrenamiento, m_conS_entrenamiento)
+#Desordenamos los datos con sample
+datos_prueba <- datos_prueba[sample(nrow(datos_prueba)),]
+datos_entrenamiento <- datos_entrenamiento[sample(nrow(datos_entrenamiento)),]
+
 
 #Creamos una lista con las variables predictoras Elbows.diameter + Bitrochanteric.diameter + Chest.diameter + Waist.Girth + Bicep.Girth + Chest.depth + Calf.Maximum.Girth + Navel.Girth
 variables <- c("Elbows.diameter", "Bitrochanteric.diameter", "Chest.diameter", "Waist.Girth", "Bicep.Girth", "Chest.depth", "Calf.Maximum.Girth", "Navel.Girth")
+
+
 
 ```
 
@@ -166,4 +180,84 @@ modeloE <- predict(modelo_simple6, datos_prueba, type = "response")
 Revisamos porque genera errores de convergencia
 ```{r}
 print(anova(modeloNulo, modelo_simple2, modelo_simple3, modelo_simple4, modelo_simple5, modelo_simple6, test = "LRT"))
-`
+```
+
+
+Como podemos apreciar, no hay diferencias significativas entre los modelos, así que usaremos el modelo 2, que tiene como predictores Biiliac.diameter y Bicep.Girth, para evaluar su poder predictivo.
+
+
+Chequeamos si cumple las condiciones
+
+```{r}
+###Vericamos la multicolinealidad
+vifs_3 <- vif(modelo_simple3)
+print(vifs_3)
+print(mean(vifs_3))
+
+
+### Verificar linealidad con los predictores
+datos_lin_w <- datos_entrenamiento %>%
+  select_all() %>%
+  mutate(Logit = psych::logit(fitted(modelo_simple3)))
+datos_lin_l <- pivot_longer(datos_lin_w, cols = c(Biiliac.diameter, Bicep.Girth, Navel.Girth), names_to = "Predictor", values_to = "Valor")
+
+P_1 <- ggscatter(datos_lin_l, x = "Logit", y = "Valor", ylab = "Valor del predictor")
+P_1 <- P_1 + geom_smooth(method = lm, formula = y ~ x, se = TRUE)
+P_1 <- P_1 + theme_pubr()
+P_1 <- P_1 + facet_wrap(~ Predictor, scales = "free_y")
+print(P_1)
+
+
+
+### Verificar independencia de los residuos
+cat("\n")
+cat("Verificación de independencia de los residuos\n")
+cat("-------------------------------------------\n")
+print(durbinWatsonTest(modelo_simple3))
+
+
+
+
+### Revisar posibles casos influyentes
+estad_inf <- influence.measures(modelo_simple3)
+estad_infmat <- round(estad_inf$infmat, 3)
+cat("\n")
+cat("Casos sospechosos de apalancamiento\n")
+cat("-----------------------------------\n")
+
+##< --------------------------- Revisar casos influyente/atipicos ------------------------------>
+
+```
+
+
+
+Como podemos ver, se cumplen todas las condiciones para generalizar nuestro model RLM, ya que  los predictores son lineales, los residuos son independientes y se cumple la multicolinealidad de los residuos, por lo que podemos proceder a evaluar el poder predictivo del modelo.
+
+
+```{r}
+# Instalar la librería pROC (si no está ya instalada)
+install.packages("pROC")
+
+# Cargar la librería pROC
+library(pROC)
+
+# Evaluación del poder predictivo
+# Seleccionamos el modelo con 3 predictores
+modelo_final <- modelo_simple3
+
+#Ecaluamos con el conjunto de prueba
+predicciones <- predict(modelo_final, datos_prueba, type = "response")
+
+#Graficamos la curva ROC, indicando AUC obtenido
+roc <- roc(datos_prueba$EN, predicciones)
+plot(roc, main = "Curva ROC", col = "blue")
+auc(roc)
+
+# Obtener las predicciones (con el mismo umbral)
+predicciones <- ifelse(predicciones > 0.5, 1, 0)
+
+
+
+
+
+```
